[package]
name = "cascade"
version = "0.1.0"
edition = "2021"
authors = ["Nirvana Labs", "Rhaqim <rhaqim@gmail.com>"]
keywords = ["node", "tester", "cli", "ethereum", "blockchain", "testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = {version = "4.3.19", features = ["derive"] }
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
dotenv = "0.15.0"
encoding_rs = "0.8.32"
hex = "0.4"
job_scheduler = "1.2.1"
lazy_static = "1.4.0"
postgres = { version = "0.19.4" }
redis = { version = "0.23.0", features = ["tls"] }
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }
web3 = "0.19.0"
